Archive2/b6/50c0f2cb87f26d/output
main.cpp: In function 'int main()':
main.cpp:6:18: error: '__STDC_VERSION__' was not declared in this scope
     std::cout << __STDC_VERSION__  << std::endl;
                  ^
